--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("http://pilarreadingcenter.org/wp-content/uploads/2016/04/Wood-White-Background-HD.jpg");
+    background-color: #d9d9d9;
     font-family: monospace;
 }
 
