--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 html, body {
     background-color: #d9d9d9;
+    font-size: 16px;
     font-family: monospace;
     height: 100%;
 }
-
+/* header section */
 li {
     float: left;
 }
@@ -27,7 +28,7 @@ ul {
     overflow: hidden;
     background-color: #333333;
 }
-
+/* gallery section */
 .container{
     margin: 0% auto;
     height: 90%;
@@ -64,10 +65,6 @@ ul {
     position: center;
 }
 
-hr {
-    clear: both;
-}
-
 .gallery:hover {
     border: 2px solid #777;
 }
@@ -80,19 +77,113 @@ hr {
 .desc {
     padding: 25px;
     text-align: center;
-
 }
 
 .butt1 {
     display: visible;
 }
+/* popup */
 
+.popup_close {
+    position: absolute;
+    right: -1rem;
+    top: -1rem;
+    width: 3rem;
+    height: 3rem;
+    font-size: 0.875rem;
+    font-weight: bold;
+    border-radius: 100%;
+    background-color: red;
+    z-index: 4;
+    color: white;
+    line-height: 3rem;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.popup:target .popup_inner {
+    bottom: 0;
+    right: 0;
+}
+
+.popup:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    padding: 4rem;
+}
+
+.popup_text h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    color: #0a0a0a;
+}
+
+.popup_text p {
+    font-size: 0.875rem;
+    color: #686868;
+    line-height: 1.5;
+}
+
+.popup_photo {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.popup_photo img {
+    width: 100%;
+    height: 100%;
+}
+
+.popup_inner {
+    position: relative;
+    bottom: -100vw;
+    right: -100vh;
+    display: flex;
+    align-items: center;
+    max-width: 1500px;
+    max-height: 800px;
+    width: 70%;
+    height: 80%;
+    background-color: white;
+}
+
+.popup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.80);
+    z-index: 2;
+    visibility: hidden;
+    opacity: 0;
+    overflow: hidden;
+}
+
+/* Canvas */
 #canvas {
     border-style: dashed;
 }
 
 .box {
-
     position: absolute;
     top: 50%;
     left: 50%;
@@ -106,7 +197,6 @@ hr {
 }
 
 .box h1 {
-
     margin: 0 0 30px;
     padding: 0;
     text-align: center;
@@ -118,7 +208,6 @@ hr {
 }
 
 .box .inputBox input {
-
     width: 100%;
     padding: 10px 0;
     font-size: 10px; 
@@ -128,7 +217,6 @@ hr {
 }
 
 .box .inputBox label {
-
     position: absolute;
     top: 0;
     left: 0;
@@ -140,16 +228,14 @@ hr {
 }
 
 .box .inputBox input:focus ~ label,
-.box .inputBox input:valid ~ label
-{
+.box .inputBox input:valid ~ label {
     top: -1px;
     left: 0;
     color: gray;
     font-size: 10px;
 }
 
-.box input[type="submit"]
-{
+.box input[type="submit"] {
     background: transparent;
     border: none;
     outline: none;
@@ -157,6 +243,12 @@ hr {
     background: skyblue;
     padding: 10px 20px;
     opacity: 0.5;
+}
+
+/* footer section */
+
+hr {
+    clear: both;
 }
 
 .footer {
