--- a/css/style.css
+++ b/css/style.css
@@ -111,11 +111,14 @@ ul {
     visibility: visible;
     opacity: 1;
 }
-
+textarea {
+    position: absolute;
+    bottom: 0;
+}
 .popup_text {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     width: 50%;
     height: 100%;
     padding: 4rem;
@@ -125,14 +128,14 @@ ul {
     font-size: 2rem;
     font-weight: 600;
     margin-bottom: 2rem;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     color: #0a0a0a;
 }
 
 .popup_text p {
     font-size: 0.875rem;
     color: #686868;
-    line-height: 1.5;
+    line-height: 1;
 }
 
 .popup_photo {
