--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #d9d9d9;
+    background-color: #595959;
     font-size: 16px;
     font-family: monospace;
     height: 100%;
@@ -33,7 +33,10 @@ ul {
 .delete_post {
     text-decoration: none;
 }
-.container{
+.container h2 {
+    color: white;
+}
+.container {
     margin: 0% auto;
     height: 90%;
     width: 90%;
@@ -192,6 +195,11 @@ ul {
 #canvas {
     border-style: dashed;
 }
+a{
+    text-decoration: none;
+    color: #95E0E8;
+    
+}
 
 .box {
     position: absolute;
@@ -200,7 +208,8 @@ ul {
     transform: translate(-50%,-50%);
     width: 400px;
     padding: 40px;
-    background: transparent;
+    /* background: transparent; */
+    background-color: #808080;
     box-sizing: border-box;
     box-shadow: 0 1px 1px rgba(0,0,0,.3);
     border: none;
@@ -219,30 +228,14 @@ ul {
 
 .box .inputBox input {
     width: 100%;
-    padding: 10px 0;
+    height: 25px;
     font-size: 10px; 
     margin-bottom: 30px;
-    background-color: rgba(0, 0,0,.1);
+    background-color: #fff;
     border-radius: 4px;
 }
-
-.box .inputBox label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color:grey;
-    pointer-events: none;
-    transition: .5s;
-}
-
-.box .inputBox input:focus ~ label,
-.box .inputBox input:valid ~ label {
-    top: -1px;
-    left: 0;
-    color: gray;
-    font-size: 10px;
+.box h1{
+    color: #fff;
 }
 
 .box input[type="submit"] {
@@ -250,11 +243,55 @@ ul {
     border: none;
     outline: none;
     color: white;
-    background: skyblue;
-    padding: 10px 20px;
-    opacity: 0.5;
+    font-size: 12pt;
+    background: #50BFE6;
+    padding-bottom: 10px;
 }
-
+#sign-up-form{
+    color: #fff;
+    margin-left: 25%;
+    margin-right: 25%;
+    height: 50%;
+    background-color: #808080;
+    padding: 5%;
+}
+#sign-up-form input{
+    width:  100%;
+    height: 25px;
+    border-radius: 5px;
+    padding: 0.5%;
+}
+#sign-up-form input[type='submit']{
+    color: #fff;
+    font-size: 12pt;   
+    background-color: #50BFE6;
+}
+#forgot-password{
+    color: #fff;
+}
+#forgot-password input[type="submit"]{
+    color: white;
+    font-size: 12pt;
+    background: #50BFE6;
+    border-radius: 5px;
+}
+/* snap section */
+.camera-section{
+    float: left;
+    width: 100%;
+}
+video {
+    width: 48%;
+    height: auto;
+}
+canvas {
+    width: 48%;
+    height: 50%;
+}
+#stickers{
+    width: 100%;
+    margin: 0% auto;
+}
 /* footer section */
 
 hr {
